# agent1

./: .cursorrules  .gitignore  README.md  prd.txt  pyproject.toml  requirements.txt
scripts/: fix_template_encoding.py
src/: example_usage.py
src/agent/: __init__.py  repository_agent.py
src/agent/core/: agent.py  config.py  file_manager.py  git_manager.py  llm_manager.py  template_manager.py
src/agent/tools/: __init__.py  code_generation_tools.py  file_tools.py  git_tools.py  template_tools.py
templates/: template_csharp.txt  template_python.txt
